Edited wiki page through web user interface.

--- a/wiki/user_manual.wiki
+++ b/wiki/user_manual.wiki
@@ -38,7 +38,7 @@ Bridge: 3HP, allows tethers and buildings to cross water.
 
 Cluster Bomb: Splits into 3 mini-bombs midflight. Each mini-bomb does 1 damage
 
-Repair: Restores unit for 1HP
+Repair: Restores unit it lands on for 1HP
 
 Tower: 3HP, expands your view in fog of war
 
@@ -71,4 +71,9 @@ Virus: Infects units, infected units are disabled and can not be used for that t
 Hub: 5HP, your primary unit. It is capable of launching all other units including other hubs.
 
 
-= Differences between MoonPy and OMBC =
+= Differences between MoonPy and Moonbase Commander =
+
+Because of fundamental differences between the MoonPy engine and the riginal Moonbase Commander (OMBC) engine. There are some subtle differences between the two. 
+ # Anti-air's shoot incoming shots automatically: In OMBC when an anti-air detected an incoming shot a little missile would fly out to hit it. This would give players the possibility of hitting something before the anti-air missile hit. In MoonPy anti-air's are now instantaneous just like shields.
+ # Spike damage is not based on distance: In OMBC a spike would do 3 damage and depending on how far the spike had to travel down the tether would do less and less damage until it did no damage at all. In MoonPy a spike does 3 damage on a direct hit and only 1 damage if it travels down a tether regardless of how long/short it has to travel.
+ # No unique player colors: In OMBC players would choose a color that would identify them to other players. In MoonPy all of "your" units are colored green while all enemies are colored red and all allies are colored blue. Although this makes it harder to identify and target a specific person, this change allows us to theoretically have an unlimited number of players rather then the 4 player cap OMBC had.
