--- a/wiki/user_manual.wiki
+++ b/wiki/user_manual.wiki
@@ -30,30 +30,30 @@ Most units are connected to each other by tethers. When a hub is destoyed all te
 
 == Level 1 ==
 
-http://code.google.com/p/tether/svn/wiki/images/hub.png Bomb: Most basic weapon, does 3 damage
+http://tether.googlecode.com/svn/wiki/images/bomb.png Bomb: Most basic weapon, does 3 damage
 
-Anti-Air: 3HP, shoots down incoming shots within it's range. Requires a turn to reload afterwards
+http://tether.googlecode.com/svn/wiki/images/antiair.png Anti-Air: 3HP, shoots down incoming shots within it's range. Requires a turn to reload afterwards
 
-Bridge: 3HP, allows tethers and buildings to cross water.
+http://tether.googlecode.com/svn/wiki/images/bridge.png Bridge: 3HP, allows tethers and buildings to cross water.
 
-Cluster Bomb: Splits into 3 mini-bombs midflight. Each mini-bomb does 1 damage
+http://tether.googlecode.com/svn/wiki/images/cluster.png Cluster Bomb: Splits into 3 mini-bombs midflight. Each mini-bomb does 1 damage
 
-Repair: Restores unit it lands on for 1HP
+http://tether.googlecode.com/svn/wiki/images/repair.png Repair: Restores unit it lands on for 1HP
 
-Tower: 3HP, expands your view in fog of war
+http://tether.googlecode.com/svn/wiki/images/tower.png Tower: 3HP, expands your view in fog of war
 
 
 == Level 3 ==
 
-EMP: Disables units within large radius, does 2 damage if it lands directly on a unit.
+http://tether.googlecode.com/svn/wiki/images/emp.png EMP: Disables units within large radius, does 2 damage if it lands directly on a unit.
 
-Missile: Automatically flys towards the nearest enemy target it detects while being launched, does 3 damage
+http://tether.googlecode.com/svn/wiki/images/missile.png Missile: Automatically flys towards the nearest enemy target it detects while being launched, does 3 damage
 
 Mines: 3HP, mines land on the ground and detonate if an enemy gets too close, does 3 damage per mine
 
-Recall: Converts a unit into energy without causing them to explode. Does 3 damage to enemy units and 5 damage to your own.
+http://tether.googlecode.com/svn/wiki/images/recall.png Recall: Converts a unit into energy without causing them to explode. Does 3 damage to enemy units and 5 damage to your own.
 
-Spike: Spikes travel down tethers allowing them to hit more then one building and do damage when landing on a tether. Does 3 damage if it lands directly on a unit, 1 damage if it travels down a tether
+http://tether.googlecode.com/svn/wiki/images/spike.png Spike: Spikes travel down tethers allowing them to hit more then one building and do damage when landing on a tether. Does 3 damage if it lands directly on a unit, 1 damage if it travels down a tether
 
 
 == Level 7 == 
@@ -62,13 +62,13 @@ Crawler: 3HP, crawlers travel forward each round until they run into something. 
 
 Collector: 5HP, provides 3 energy per round if placed on an energy pool. Provides 1 energy per round if placed on normal ground. When destroyed they explode in a large radius for 5 damage
 
-Offense: 3HP, fires weapons at twice the range of a hub, but is unable to launch buildings.
+http://tether.googlecode.com/svn/wiki/images/offense.png Offense: 3HP, fires weapons at twice the range of a hub, but is unable to launch buildings.
 
 Shield: 3HP, shoots down incoming shots within it's range. Unlike the anti-air it does not need to reload between turns.
 
-Virus: Infects units, infected units are disabled and can not be used for that turn. During each turn the virus deals one damage to the infected unit and travels down the tether to infect another unit. This continues until all connected units have been infected. Although viruses can deal damage they can not destroy units.
+http://tether.googlecode.com/svn/wiki/images/virus.png Virus: Infects units, infected units are disabled and can not be used for that turn. During each turn the virus deals one damage to the infected unit and travels down the tether to infect another unit. This continues until all connected units have been infected. Although viruses can deal damage they can not destroy units.
 
-Hub: 5HP, your primary unit. It is capable of launching all other units including other hubs.
+http://tether.googlecode.com/svn/wiki/images/hub.png Hub: 5HP, your primary unit. It is capable of launching all other units including other hubs.
 
 
 = Differences between MoonPy and Moonbase Commander =
