Edited wiki page through web user interface.

--- a/wiki/game_balancing_debate.wiki
+++ b/wiki/game_balancing_debate.wiki
@@ -1,9 +1,9 @@
-#labels Phase-Design,Deprecated
+#labels Phase-Design
 #Game balancing debate
 
 = Need for balance =
 
-MoonPy has some major differences from OMBC due to engine differences. This leads to some units becoming somewhat unbalanced even though the stats are the 'same' as OMBC, especially when it comes to the radius of effects. This page lists the current stats of each unit and gives people a chance to say what changes (if any) need to be done.
+MoonPy has some major differences from OMBC due to engine differences. This leads to some units becoming somewhat unbalanced even though the stats are the 'same' as OMBC, especially when it comes to the radius of effects. This page lists the current stats of each unit and gives people a chance to say what changes (if any) need to be done. *Note this page is still under construction*
 
 
 = Current unit stats =
