Edited wiki page through web user interface.

--- a/wiki/archivingscript.wiki
+++ b/wiki/archivingscript.wiki
@@ -25,8 +25,6 @@
 
 
 cd ..
-find . -name .svn -exec rm -rf {} \;
-find . -name *.pyc -exec rm -rf {} \;
 mkdir ./moonpy
 cp -r ./client ./moonpy
 cp -r ./common ./moonpy
@@ -39,5 +37,18 @@ cp -r ./AUTHORS.txt ./moonpy
 cp -r ./COPYING.txt ./moonpy
 cp -r ./moon.py ./moonpy
 cp -r ./README.txt ./moonpy
-tar -czvf ./moonpy_windows.tar.gz ./moonpy
-echo finished creating windows archive
+cd moonpy
+find . -name .svn -exec rm -rf {} \;
+find . -name *.pyc -exec rm -rf {} \;
+cd ..
+tar -czvf ./moonpy_all.tar.gz ./moonpy
+echo finished creating archive
+cd moonpy
+rm -fr ./zope
+rm -fr ./twisted
+cd ..
+tar -czvf ./moonpy_deb.tar.gz ./moonpy
+mkdir ./sandbox
+mv ./moonpy ./sandbox
+mv ./moonpy_deb.tar.gz ./sandbox
+cd sandbox
